Finalizando 1ª parte html/css/js

--- a/index.html
+++ b/index.html
@@ -114,6 +114,28 @@
     </dl>
   </section>
 
+  <section class="grid-section numeros">
+    <h1 class="titulo">Números</h1>
+    <ul>
+      <li>
+        <p>Lobo</p>
+        <span>4874</span>
+      </li>
+      <li>
+        <p>Raposas</p>
+        <span>5374</span>
+      </li>
+      <li>
+        <p>Esquilos</p>
+        <span>12340</span>
+      </li>
+      <li>
+        <p>Ursos</p>
+        <span>230</span>
+      </li>  
+    </ul>
+  </section>
+
   <section class="grid-section contato" id="contato">
     <h1 class="titulo">Contato</h1>
     <div class="mapa">
